--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-node_modules
+# 
+/node_modules
+/.pnp
+.pnp.js
+
+/dist
+/build
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+/.idea
+/.vscode
+*.sublime-project
+*.sublime-workspace
+
+.DS_Store
+Thumbs.db
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
